hphp/hack/test/typecheck/tconst/tconst_bad_access_indirect.php.exp
File "tconst_bad_access_indirect.php", line 7, characters 18-22:
Invalid type hint (Typing[4090])
  File "tconst_bad_access_indirect.php", line 7, characters 21-22:
  No type constant `T3` in `E`
  File "tconst_bad_access_indirect.php", line 4, characters 7-7:
  Declaration of `E` is here
